# explain-my-data-CLI

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: Dockerfile  main.py
backend/services/: analysis_service.py
datasets/: ames_housing.csv  konut_kira.xlsx  sp500_returns.csv  titanic_test.csv
datasets/schemas/: iris_schema.yaml  titanic_schema.yaml
docs/: Infra-DOCUMENTATION.md  cli-reference.md  statistical-methods.md
frontend/: package.json
frontend/app/analyze/: page.tsx
frontend/app/batch/: page.tsx
frontend/components/batch/: BatchQueue.tsx
frontend/components/layout/: AppShell.tsx
frontend/components/report/: OutlierSection.tsx
frontend/components/upload/: UploadZone.tsx
frontend/lib/: api.ts
src/emd/: __init__.py  cli.py  config.py
src/emd/analysis/: __init__.py  correlation.py  distribution.py  doctor.py  drift.py  missing.py  outlier.py  target.py
src/emd/charts/: __init__.py  renderer.py
src/emd/cli/: __init__.py  __main__.py  _app.py  _pipeline.py  _ui.py  analyze.py  batch.py  check.py  compare.py  doctor.py  info.py  schema.py  sheets.py  summary.py
src/emd/loader/: __init__.py  base.py  csv_loader.py  xlsx_loader.py
tests/: conftest.py  test_cli.py  test_correlation.py  test_distribution.py  test_doctor.py  test_drift.py  test_loader.py  test_missing.py  test_outlier.py  test_quality.py  test_schema.py  test_target.py
web/: README.md
web/backend/: Dockerfile  store.py
web/frontend/: README.md  package-lock.json  package.json
(+29 files in other folders)
