[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "explain-my-data"
version = "0.1.0"
description = "EDA automation CLI — rich Markdown reports from CSV/XLSX files"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Utku Kosman", email = "kemalutkukosman@gmail.com" }]
keywords = ["eda", "data-science", "cli", "analysis", "statistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "typer[all]>=0.12.3",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "xlrd>=2.0.1",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.2",
    "chardet>=5.2.0",
    "statsmodels>=0.14.2",
    "jinja2>=3.1.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.5.0"]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
emd = "emd.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/emd"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/emd --cov-report=term-missing -q"
